--- a/product.html
+++ b/product.html
@@ -36,7 +36,7 @@
                     <div><img src="media/home-catalog/4.png" alt=""></div>
                     <div><img src="media/main-banner-img.png" alt=""></div>
                     <div><img src="media/home-catalog/4.png" alt=""></div>
-                    <div><img src="media/main-banner-img.png" alt=""></div>
+                    <div><img src="media/main-banner -img.png" alt=""></div>
                 </div>
                 <div class="banner_paginator">
                     <div class="prev"></div>
@@ -89,12 +89,39 @@
                         соответствии с требованиями ДБН В 2.2-10, а также при производстве вычислительной и электронной техники, точного машиностроения, пищевой промышленности и
                         всех видов производств с применением “высоких технологий”.</p>
                 </div>
-                <div class="tab-pane fade" id="b" role="tabpanel" aria-labelledby="b">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur
-                    dignissimos doloribus eligendi incidunt ipsam maiores obcaecati quo repellendus! A animi aspernatur blanditiis est ex exercitationem illum, impedit natus
-                    similique voluptatibus?
+                <div class="tab-pane fade" id="b" role="tabpanel" aria-labelledby="b">
+                    <table>
+                        <tr>
+                            <td>FansPortable</td>
+                            <td><div class="gradient-btn">
+                                <a href="" download="">Скачать</a>
+                            </div></td>
+                            <td><div class="border-btn">
+                                <a href="" target="_blank">Посмотреть</a>
+                            </div></td>
+                        </tr>
+                        <tr>
+                            <td>инструкция</td>
+                            <td><div class="gradient-btn">
+                                <a href="" download="">Скачать</a>
+                            </div></td>
+                            <td><div class="border-btn">
+                                <a href="" target="_blank">Посмотреть</a>
+                            </div></td>
+                        </tr>
+                        <tr>
+                            <td>обновление к БД (24.04.2019)</td>
+                            <td><div class="gradient-btn">
+                                <a href="" download="">Скачать</a>
+                            </div></td>
+                            <td><div class="border-btn">
+                                <a href="" target="_blank">Посмотреть</a>
+                            </div></td>
+                        </tr>
+                    </table>
                 </div>
-                <div class="tab-pane fade" id="c" role="tabpanel" aria-labelledby="c">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt ducimus
-                    facilis laudantium minima minus pariatur quasi ut. Dolores eos esse eveniet molestias natus nulla numquam quisquam totam! Nobis, omnis, quam.
+                <div class="tab-pane fade" id="c" role="tabpanel" aria-labelledby="c">
+                    <img src="media/order-form.png" alt="">
                 </div>
             </div>
         </div>
