news and news item

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 </footer>
 
 <script src="js/jquery-3.4.1.min.js"></script>
-<script src="../js/popper.min.js"></script>
+<script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/slick.min.js"></script>
 <script src="js/main.js"></script>
