--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     </nav>
     <div class="container">
         <div class="row">
-            <div class="col-md-8 offset-xl-2">
+            <div class="col-lg-8 offset-xl-2">
                 <h2>ЧАО «Интеркондиционер» - предприятие новой Украины, является крупнейшим производителем кондиционеров, систем промышленной вентиляции и кондиционирования,
                     дымоудаления,
                     воздушного отопления и выполняет работы по изготовлению промышленного вентиляционного оборудования, его наладке и технического обслуживания.</h2>
@@ -43,17 +43,30 @@
             <div><img src="media/about-img3.png" alt=""></div>
             <div><img src="media/about-img1.png" alt=""></div>
         </div>
-        <h1>История и характеристика предприятия</h1>
-        <div class="row">
-            <div class="col-md-8 offset-xl-2">
-                <p>ЧАО «Интеркондиционер» создано в 1996 году, располагается в промышленной зоне крупнейшего индустриального города Украины – Харькова. На площади 1,5 га. построено три современных производственных корпуса и пять зданий для обслуживания, общей площадью более 10000 м2. </p>
-                <p>Производство кондиционеров, систем промышленной вентиляции и кондиционирования, дымоудаления, воздушного отопленияСовременный дизайн, высокая культура, новейшее прогрессивное оборудование, внедрение системы управления качеством ISO 9001-2001 в 2008г., создание превосходных условий для работников дало возможность выпускать системы промышленной вентиляции, кондиционирования, дымоудаления и воздушного отопления, получивших признание в Украине и за рубежом, отмеченную множеством дипломов и наград. Вся продукция сертифицирована. Наличие мощной производственной и научно-технической базы, современные технологии дают возможность выпускать продукцию, удовлетворяющую запросы монтажных, проектных, строительных организаций и других потребителей всех отраслей народного хозяйства.</p>
-                <img src="media/about-img4.png" alt="">
-            </div>
-        </div>
-
     </div>
+    <div class="history">
+        <div class="container">
+            <h1>История и характеристика предприятия</h1>
+            <div class="row">
+                <div class="col-lg-8 offset-xl-2">
+                    <p>ЧАО «Интеркондиционер» создано в 1996 году, располагается в промышленной зоне крупнейшего индустриального города Украины – Харькова. На площади 1,5 га.
+                        построено три
+                        современных производственных корпуса и пять зданий для обслуживания, общей площадью более 10000 м2. </p>
+                    <p>Производство кондиционеров, систем промышленной вентиляции и кондиционирования, дымоудаления, воздушного отопленияСовременный дизайн, высокая культура,
+                        новейшее
+                        прогрессивное оборудование, внедрение системы управления качеством ISO 9001-2001 в 2008г., создание превосходных условий для работников дало возможность
+                        выпускать
+                        системы промышленной вентиляции, кондиционирования, дымоудаления и воздушного отопления, получивших признание в Украине и за рубежом, отмеченную множеством
+                        дипломов
+                        и наград. Вся продукция сертифицирована. Наличие мощной производственной и научно-технической базы, современные технологии дают возможность выпускать
+                        продукцию,
+                        удовлетворяющую запросы монтажных, проектных, строительных организаций и других потребителей всех отраслей народного хозяйства.</p>
+                    <img src="media/about-img4.png" alt="">
+                </div>
+            </div>
 
+        </div>
+    </div>
 </main>
 <footer>
     <div class="container">
