--- a/contacts.html
+++ b/contacts.html
@@ -24,7 +24,7 @@
             </nav>
             <h1>Контакты</h1>
             <div class="row">
-                <div class="col-md-6 contacts-col">
+                <div class="col-lg-6 contacts-col">
                     <h2>ЧАО "Интеркондиционер" Проектирование, производство, монтаж кондиционеров, вентиляторов, заслонок, воздушных клапанов и фильтров, систем вентиляции и
                         кондиционирования в Украине, Харьков. </h2>
                     <div class="address">
@@ -55,7 +55,7 @@
                     <b>понедельник-пятница: с 8.30 до 17.00</b><br>
                     <b>суббота-воскресенье: выходной</b>
                 </div>
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <div class="contact-form">
                         <form action="">
                             <div class="form-item">
@@ -80,8 +80,11 @@
                                 <label for="message">Сообщение:</label>
                             </div>
                             <div class="download-file">
-                                Прикрепить фаил
-                                <input id="file" type="file" multiple>
+                                <div>   Прикрепить фаил
+                                    <input id="file" type="file" multiple>
+                                    <label for="file">
+                                    </label>
+                                </div>
                                 <div>
                                     Загруженно файлов: <span class="files-count">0</span>
                                 </div>
@@ -202,12 +205,14 @@
 <footer>
     <div class="container">
         <div class="footer-logo">
-            <img src="media/logo-white.svg" alt="">
+            <a href="">
+                <img src="media/logo-white.svg" alt="">
+            </a>
         </div>
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-sm-8 col-lg-3">
                 <div class="address">
-                    Украина, г. Харьков, ул. Енакиевская, 17
+                    Украина, г. Харьков, <br> ул. Енакиевская, 17
                 </div>
                 <div class="mail">
                     <a href="mailto:intercon@traffic.net.ua">
@@ -215,7 +220,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-sm-4 col-lg-3">
                 <div class="phones">
                     <a href="tel:+380577780639">+38 (057) 778 06 39</a>
                     <a href="tel:+380577780644">+38 (057) 778 06 44</a>
@@ -223,7 +228,7 @@
                     <a href="tel:0800408409">0 800 408 409</a>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div class="footer-info">
                      <span>
                     &copy; 2009 -
