--- a/certificates.html
+++ b/certificates.html
@@ -72,12 +72,14 @@
 <footer>
     <div class="container">
         <div class="footer-logo">
-            <img src="media/logo-white.svg" alt="">
+            <a href="">
+                <img src="media/logo-white.svg" alt="">
+            </a>
         </div>
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-sm-8 col-lg-3">
                 <div class="address">
-                    Украина, г. Харьков, ул. Енакиевская, 17
+                    Украина, г. Харьков, <br> ул. Енакиевская, 17
                 </div>
                 <div class="mail">
                     <a href="mailto:intercon@traffic.net.ua">
@@ -85,7 +87,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-sm-4 col-lg-3">
                 <div class="phones">
                     <a href="tel:+380577780639">+38 (057) 778 06 39</a>
                     <a href="tel:+380577780644">+38 (057) 778 06 44</a>
@@ -93,7 +95,7 @@
                     <a href="tel:0800408409">0 800 408 409</a>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div class="footer-info">
                      <span>
                     &copy; 2009 -
