--- a/index.html
+++ b/index.html
@@ -39,77 +39,86 @@
     <div class="header-btm">
         <div class="container">
             <div class="logo-sm"><img src="media/logo-sm.svg" alt=""></div>
-            <ul class="nav">
-                <li class="nav-item">
-                    <a class="nav-link">О компании</a>
-                    <div class="drop-menu">
-                        <a class="dropdown-item" href="#">О нас</a>
-                        <a class="dropdown-item" href="#">Производство</a>
-                        <a class="dropdown-item" href="#">Сервис</a>
-                        <a class="dropdown-item" href="#">Стендовые испытания</a>
-                        <a class="dropdown-item" href="#">Вакансии</a>
-                    </div>
-                </li>
-                <li class="nav-item ">
-                    <a class="nav-link">Каталог</a>
-                    <div class="drop-menu with-columns">
-                        <div class="menu-column">
-                            <a class="dropdown-item" href="#">Общепромышленная вентиляция </a>
-                            <ul>
-                                <li><a href=" ">Вентиляторы радиальные</a></li>
-                                <li><a href="">Вентиляторы крышные</a></li>
-                                <li><a href="">Вентиляторы осевые</a></li>
-                                <li><a href="">Вентиляторы канальные</a></li>
-                            </ul>
-                            <a class="dropdown-item" href="#">Противопожарное оборудование </a>
-                            <ul>
-                                <li><a href=" ">Вентиляторы дымоудаления </a></li>
-                                <li><a href="">Клапаны дымоудаления</a></li>
-                                <li><a href="">Клапаны огнезадерживающие</a></li>
-                            </ul>
-                            <a class="dropdown-item" href="#">Оборудование для монтажа вентиляторов </a>
-                            <ul>
-                                <li><a href=" ">Стаканы</a></li>
-                                <li><a href="">Виброизоляторы и гибкие вставки</a></li>
-                            </ul>
+
+            <nav class="navbar-expand-xl navbar-light">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse " id="navbar">
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a class="nav-link">О компании</a>
+                        <div class="drop-menu">
+                            <a class="dropdown-item" href="#">О нас</a>
+                            <a class="dropdown-item" href="#">Производство</a>
+                            <a class="dropdown-item" href="#">Сервис</a>
+                            <a class="dropdown-item" href="#">Стендовые испытания</a>
+                            <a class="dropdown-item" href="#">Вакансии</a>
                         </div>
-                        <div class="menu-column">
-                            <a class="dropdown-item" href="#">Кондиционеры центральные каркасные КЦК</a>
-                            <a class="dropdown-item" href="#">Сетевое оборудование</a>
-                            <ul>
-                                <li><a href=" ">Клапаны и заслонки </a></li>
-                                <li><a href="">Узлы прохода, дефлекторы, зонты, двери, шумоглушители </a></li>
-                                <li><a href="">Фильтры, ИРП</a></li>
-                            </ul>
-                            <a class="dropdown-item" href="#">Автоматизация </a>
-                            <a class="dropdown-item" href="#">Отопительное оборудование  </a>
-                            <ul>
-                                <li><a href=" ">Агрегаты воздушно-отопительные  </a></li>
-                                <li><a href="">Воздухонагреватель (калориферы) </a></li>
-                            </ul>
-                            <a class="dropdown-item" href="#">Скачать каталоги</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link">Каталог</a>
+                        <div class="drop-menu with-columns">
+                            <div class="menu-column">
+                                <a class="dropdown-item" href="#">Общепромышленная вентиляция </a>
+                                <ul>
+                                    <li><a href=" ">Вентиляторы радиальные</a></li>
+                                    <li><a href="">Вентиляторы крышные</a></li>
+                                    <li><a href="">Вентиляторы осевые</a></li>
+                                    <li><a href="">Вентиляторы канальные</a></li>
+                                </ul>
+                                <a class="dropdown-item" href="#">Противопожарное оборудование </a>
+                                <ul>
+                                    <li><a href=" ">Вентиляторы дымоудаления </a></li>
+                                    <li><a href="">Клапаны дымоудаления</a></li>
+                                    <li><a href="">Клапаны огнезадерживающие</a></li>
+                                </ul>
+                                <a class="dropdown-item" href="#">Оборудование для монтажа вентиляторов </a>
+                                <ul>
+                                    <li><a href=" ">Стаканы</a></li>
+                                    <li><a href="">Виброизоляторы и гибкие вставки</a></li>
+                                </ul>
+                            </div>
+                            <div class="menu-column">
+                                <a class="dropdown-item" href="#">Кондиционеры центральные каркасные КЦК</a>
+                                <a class="dropdown-item" href="#">Сетевое оборудование</a>
+                                <ul>
+                                    <li><a href=" ">Клапаны и заслонки </a></li>
+                                    <li><a href="">Узлы прохода, дефлекторы, зонты, двери, шумоглушители </a></li>
+                                    <li><a href="">Фильтры, ИРП</a></li>
+                                </ul>
+                                <a class="dropdown-item" href="#">Автоматизация </a>
+                                <a class="dropdown-item" href="#">Отопительное оборудование  </a>
+                                <ul>
+                                    <li><a href=" ">Агрегаты воздушно-отопительные  </a></li>
+                                    <li><a href="">Воздухонагреватель (калориферы) </a></li>
+                                </ul>
+                                <a class="dropdown-item" href="#">Скачать каталоги</a>
+                            </div>
                         </div>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Программы подбора</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Сертификаты</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Новости</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link">Контакты</a>
-                    <div class="drop-menu">
-                        <a class="dropdown-item" href="#">1</a>
-                        <a class="dropdown-item" href="#">2</a>
-                        <a class="dropdown-item" href="#">3</a>
-                        <a class="dropdown-item" href="#">4</a>
-                    </div>
-                </li>
-            </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Программы подбора</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Сертификаты</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Новости</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link">Контакты</a>
+                        <div class="drop-menu">
+                            <a class="dropdown-item" href="#">1</a>
+                            <a class="dropdown-item" href="#">2</a>
+                            <a class="dropdown-item" href="#">3</a>
+                            <a class="dropdown-item" href="#">4</a>
+                        </div>
+                    </li>
+                </ul>
+                </div>
+            </nav>
+
             <div class="search-btn open-search"></div>
             <div class="form-btn gradient-btn">ЗАДАТЬ ВОПРОС</div>
             <div class="contact-form">
@@ -292,15 +301,16 @@
     </div>
 </div>
 <footer>
-
     <div class="container">
         <div class="footer-logo">
-            <img src="media/logo-white.svg" alt="">
+            <a href="">
+                <img src="media/logo-white.svg" alt="">
+            </a>
         </div>
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-sm-8 col-lg-3">
                 <div class="address">
-                    Украина, г. Харьков, ул. Енакиевская, 17
+                    Украина, г. Харьков, <br> ул. Енакиевская, 17
                 </div>
                 <div class="mail">
                     <a href="mailto:intercon@traffic.net.ua">
@@ -308,7 +318,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-sm-4 col-lg-3">
                 <div class="phones">
                     <a href="tel:+380577780639">+38 (057) 778 06 39</a>
                     <a href="tel:+380577780644">+38 (057) 778 06 44</a>
@@ -316,7 +326,7 @@
                     <a href="tel:0800408409">0 800 408 409</a>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div class="footer-info">
                      <span>
                     &copy; 2009 -
@@ -325,7 +335,7 @@
                     </span>
                     ЧАО «ИНТЕРКОНДИЦИОНЕР»
                 </span>
-                    <span>created by <a href="https://www.koda-ltd.com/">KODA</a>2019</span>
+                    <span>created by <a href="https://www.koda-ltd.com/">KODA </a>2019</span>
                 </div>
             </div>
         </div>
