--- a/product.html
+++ b/product.html
@@ -192,15 +192,15 @@
             <div class="accordion" id="accordion">
                 <div class="card">
                     <div class="card-header" id="headingOne">
-                        <h5 class="mb-0">
-                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+
+                            <button class="btn collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                                 Описание
                             </button>
-                        </h5>
+
                     </div>
 
-                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-                        <div class="card-body">
+                    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div class="card-body tab-content">
                             <h3>Типы кондиционеров центральных каркасных (приточных, приточно-вытяжных установок):</h3>
                             <p>- Кондиционеры КЦК-1,6, КЦК-3,15, КЦК-5, КЦК-6,3, КЦК-8-1, КЦК-8-2, КЦК-10, КЦК-12,5, КЦК-16, КЦК-20; КЦК-25; КЦК-31,5; КЦК-40; - Вертикальные кондиционеры
                                 КЦКВ-1,6, КЦКВ-3,15, КЦКВ-5, КЦКВ-6,3, КЦКВ-8-1, КЦКВ-8-2, КЦКВ-10; - Наружные кондиционеры КЦКЗ-1,6, КЦКЗ-3,15, КЦКЗ-5, КЦКЗ-6,3, КЦКЗ-8-1, КЦКЗ-8-2,
@@ -231,18 +231,16 @@
                 </div>
                 <div class="card">
                     <div class="card-header" id="headingTwo">
-                        <h5 class="mb-0">
-                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            <button class="btn collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                                 Технические характеристики
                             </button>
-                        </h5>
                     </div>
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                        <div class="card-body">
+                        <div class="card-body tab-content">
                             <table>
                                 <tr>
                                     <td>FansPortable</td>
-                                    <td>Программа предназначена для DeskTop версии</td>
+                                    <td colspan="2">Программа предназначена для DeskTop версии</td>
                                 </tr>
                                 <tr>
                                     <td>инструкция</td>
@@ -259,12 +257,7 @@
                                 </tr>
                                 <tr>
                                     <td>обновление к БД (24.04.2019)</td>
-                                    <td>
-                                        <div class="gradient-btn">
-                                            <a href="" download="">Скачать</a>
-                                        </div>
-                                    </td>
-                                    <td></td>
+                                    <td colspan="2">Программа предназначена для DeskTop версии</td>
                                 </tr>
                             </table>
                         </div>
@@ -272,14 +265,12 @@
                 </div>
                 <div class="card">
                     <div class="card-header" id="headingThree">
-                        <h5 class="mb-0">
-                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            <button class="btn collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                                 Форма оформления заказа
                             </button>
-                        </h5>
                     </div>
                     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                        <div class="card-body">
+                        <div class="card-body tab-content">
                             <img src="media/order-form.png" alt="">
                         </div>
                     </div>
