--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse " id="navbar">
+                        <button
+                        class="close-menu-btn"
+                        type="button"
+                        data-toggle="collapse"
+                        data-target="#navbar"
+                        aria-controls="navbar"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation">
+                    </span>
+                </button>
                     <ul class="nav">
                         <li class="nav-item">
                             <a class="nav-link">О компании</a>
